# tesseract

./: .gitmodules  CMakeLists.txt
ccmain/: tesseract_cube_combiner.h
ccutil/: ccutil.cpp  hashfn.h  platform.h
cmake/: BuildFunctions.cmake  Configure.cmake  FindLiblept.cmake  LoadLibs.cmake  SourceGroups.cmake
cube/: bmp_8.cpp  cached_file.h  string_32.h  tuning_params.h
neural_networks/runtime/: input_file_buffer.h  neuron.h
training/: boxchar.h  classifier_tester.cpp  commandlineflags.cpp  commandlineflags.h  fileio.h  pango_font_info.cpp  shapeclustering.cpp  stringrenderer.cpp  text2image.cpp  unicharset_training_utils.h  util.h
